test/src/e2e_vm_tests/test_programs/should_fail/disallowed_gm/src/main.sw
script;

fn main() {
  // GM should be disallowed
  asm(r1) {
    gm r1 i1;
  };
}
